scrollbar modified + listdata bug

--- a/frontend/src/navigation/Dashboard.css
+++ b/frontend/src/navigation/Dashboard.css
@@ -189,6 +189,25 @@
     color:#eb3b5a;
 }
 
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: none;
+}
+
+::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: none;
+}
+
+::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: rgba(0,0,0,0.2);
+}
 
 @media screen and (max-width:425px){
     .dashboard__global--button > button{
